cluster/apps/default/freshrss/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: freshrss
  namespace: default
  labels:
    app: freshrss
spec:
  replicas: 1
  selector:
    matchLabels:
      app: freshrss
  template:
    metadata:
      labels:
        app: freshrss
    spec:
      containers:
        - name: freshrss
          image: linuxserver/freshrss
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 35
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 60
            periodSeconds: 5
          volumeMounts:
            - name: freshrss-config
              mountPath: /config
            - name: localtime
              mountPath: /etc/localtime
              readOnly: true
      volumes:
        - name: freshrss-config
          persistentVolumeClaim:
            claimName: freshrss
        - name: localtime
          hostPath:
            path: /etc/localtime
