cluster/apps/default/freshrss/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: freshrss
  namespace: default
  annotations:
    hajimari.io/enable: "true"
    hajimari.io/icon: "rss"
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    external-dns.alpha.kubernetes.io/target: "${SECRET_DOMAIN}"
spec:
  ingressClassName: traefik
  tls:
    - secretName: rss.${SECRET_DOMAIN}
      hosts:
        - rss.${SECRET_DOMAIN}
  rules:
    - host: rss.${SECRET_DOMAIN}
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: freshrss
                port:
                  number: 80
